--- a/Scrolling App 1/res/values/dimens.xml
+++ b/Scrolling App 1/res/values/dimens.xml
@@ -2,4 +2,8 @@
 <resources>
     <dimen name="padding_regular">10dp</dimen>
     <dimen name="line_spacing">5sp</dimen>
+    <dimen name="heading_text_size">25sp</dimen>
+    <dimen name="subheading_width">100dp</dimen>
+    <dimen name="article_text_width">250dp</dimen>
+    <dimen name="overall_article_margin">25dp</dimen>
 </resources>
